# bbscript

./: .gitattributes  .gitignore  BBS_ABL.bbscript  BBS_ABL.txt  BBS_ABLEF.bbscript  BBS_ABLEF.txt  BBScript_notes.md  Cargo.toml  README.md  p4u2.ron
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: command_db.rs  error.rs  game_config.rs  log.rs  main.rs  parser.rs  readable_bbscript.pest  rebuilder.rs
static_db/: bbcf.ron  bbcf_old.ron  bbcfnew.ron  bbtag.ron  dbfz.ron  dbfz_old.ron  dbfznew.ron  dnf.ron  gbvs.ron  gbvsnew.ron  gbvsr.ron  ggrev2.ron  ggrev2_old.ron  ggst.ron  ggst_old.ron  ggstnew.ron  p4u2.ron  p4u2_old.ron
static_db/bbcf/: characters.json  commandDB.json
static_db/bbcf/named_values/: move_inputs.json  normal_inputs.json
static_db/dbfz/: commandDB.json
static_db/ggrev2/: commandDB.ron
static_db/ggrev2/named_values/: groundCounterhitEffect.json  guardType.json  moveType.json  move_input.json
