[package]
name = "bbscript"
version = "0.7.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
byteorder = "1.3"
serde = { version = "1.0", features = ['derive'] }
thiserror = "1.0"
ron = "0.6"
bimap = { version = "0.6", features = ['serde'] }
bytes = "1.0"
hex = "0.4"
pest_derive = "2.1"
pest_consume = "1.0"
pest = "2.1"
colored = "2.0"
