[package]
name = "bbscript"
version = "0.9.2"
edition = "2021"

[features]
old-cfg-converter = []

[dependencies]
clap = { version = "3.1", features = ['cargo', 'derive', 'env'] }
byteorder = "1.3"
serde = { version = "1.0", features = ['derive'] }
thiserror = "1.0"
ron = "0.7"
bimap = { version = "0.6", features = ['serde'] }
bytes = "1.0"
hex = "0.4"
pest_derive = "2.1"
pest_consume = "1.0"
pest = "2.1"
smallvec = { version = "1.8", features = ['serde']}
colored = "2.0"
log = "0.4"
anyhow = "1.0"
simple_logger = "2.1.0"
